--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
             <!-- Windows XP Style Notification -->
             <div class="xp-container" onclick="event.stopPropagation()">
                 <div class="xp-title-bar">
-                    <span>Jak pielegnowac</span>
+                    <span>Jak pielęgnować</span>
                     <div class="xp-close" onclick="toggleLightbox(false)">×</div>
                 </div>
                 <div class="xp-body">
@@ -503,4 +503,5 @@
     </script>
 
 </body>
+
 </html>
